button fixes, alignment.

--- a/07LessonSeven/homework/css/style.css
+++ b/07LessonSeven/homework/css/style.css
@@ -1,6 +1,7 @@
 * {
     font-family: sans-serif;
 }
+
 h1{
   margin-left:175px;
 }
@@ -10,6 +11,7 @@ h1{
     height:50px;
     align-content: center;
 }
+
 .first_nav{
   margin-left:175px;
 }
@@ -20,50 +22,56 @@ a{
   float:left;
   margin-left:10px;
 }
+
 .content {
-    padding: 5px 100px;
+    margin: 5px 175px;
 }
+
 .hire {
     float: left;
     background-color: #313131;
-    width: 500px;
+    width: 400px;
     height: 200px;
     padding: 10px;
 }
+
 .hire_link{
+  position:absolute;
   background-color:#313131;
   padding:2px;
   border:white 2px solid;
   color:white;
-  float:right;
+  top:321px;
+  left:432px;
 }
+
 .apply {
     float: left;
     background-color: #55a747;
-    width: 500px;
+    width: 400px;
     height: 200px;
     padding:10px;
 }
+
 .apply_link{
+  position:absolute;
   background-color:#55a747;
   padding:2px;
   border:white 2px solid;
   color:white;
-  float:right;
+  top: 321px;
+  left:849px;
 }
 
 h2{
-  text-align:center;
+  text-align:left;
   color:white;
+  padding-left:10px;
 }
 
 p {
-  padding:0px 20px;
-    font-size: 14px;
-    text-align:center;
-    color:white;
-}
-
-button {
-    text-align: right;
+  padding:0px 10px;
+  font-size: 15px;
+  text-align:center;
+  color:white;
 }
